package org.example.model;

public interface EstadoCarta {
    String describir(Rol rol);
}