package org.example.model;

public interface PuedeInvestigar {
    void elegirInvestigar(Jugador objetivo);
    Bando resultadoInvestigacion();
}
