package org.example.model;

public interface VotanteMafia {
    VotoMafia crearVotoMafia(Jugador objetivo);
}
