@startuml ModeloMafiaRoles
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 45
skinparam ranksep 65

abstract class Rol {
  + {abstract} bando() : Bando
  + {abstract} nombre() : String
  + rutaImagen() : String
  + resultadoAlSerInvestigado() : Bando
  + descripcionAlSerInvestigado() : String
  + ejecutar(accion : AccionDeRol)
}

together {
  class Mafioso {
    + bando() : Bando
    + nombre() : String
    + crearVotoMafia(objetivo : Jugador) : VotoMafia
  }
  class Ciudadano {
    + bando() : Bando
    + nombre() : String
  }
  class Padrino {
    + resultadoAlSerInvestigado() : Bando
    + descripcionAlSerInvestigado() : String
    + nombre() : String
    + crearVotoMafia(objetivo : Jugador) : VotoMafia
  }
  class Detective {
    + nombre() : String
    + actuarEnNoche(resolucion : ResolucionNocturna)
    + ejecutar(accion : AccionDeRol)
  }
  class Medico {
    - objetivoAProteger : Jugador
    - ultimoProtegido : Jugador
    + bando() : Bando
    + nombre() : String
    + elegirProteger(objetivo : Jugador)
    + actuarEnNoche(resolucion : ResolucionNocturna)
  }
  class Sheriff {
    + nombre() : String
    + revelarJugadorInvestigado() : Jugador
    + revelarse()
    + ejecutar(accion : AccionDeRol)
  }
}

interface VotoMafia {
  + objetivo() : Jugador
  + esPrioritario() : boolean
}
together {
  class VotoNormal {
    + objetivo() : Jugador
    + esPrioritario() : boolean
  }
  class VotoPadrino {
    + objetivo() : Jugador
    + esPrioritario() : boolean
  }
}

class Carta {
  - rol : Rol
  - estado : EstadoCarta
  + Carta(rol : Rol)
  + revelar()
  + descripcion() : String
}
interface EstadoCarta {
  + describir(rol : Rol) : String
}
together {
  class Oculta {
    + describir(rol : Rol) : String
  }
  class Revelada {
    + describir(rol : Rol) : String
  }
}

interface Bando {
  + nombre() : String
  + esMismoBando(otro : Bando) : boolean
  + esMismoBandoQueMafia(mafia : BandoMafia) : boolean
  + esMismoBandoQueCiudadano(ciudadano : BandoCiudadano) : boolean
  + ganoSegun(jugadores : Jugadores) : boolean
}
together {
  class BandoMafia {
    + nombre() : String
    + ganoSegun(jugadores : Jugadores) : boolean
  }
  class BandoCiudadano {
    + nombre() : String
    + ganoSegun(jugadores : Jugadores) : boolean
  }
}

class ResolucionNocturna {
  - atacado: Jugador
  - protegido: List<Jugador>
  + registrarAtaque(objetivo : Jugador)
  + registrarProteccion(objetivo : Jugador)
  + resolver() : Optional<Jugador>
}
class Jugador {
  + estaVivo() : boolean
  + resultadoAlSerInvestigado() : Bando
  + descripcionAlSerInvestigado() : String
  + elegirInvestigar(objetivo : Jugador)
  + elegirProteger(objetivo : Jugador)
  + crearVotoMafia(objetivo : Jugador) : VotoMafia
  + revelarse()
  + revelarJugador() : Jugador
  + resultadoInvestigacion() : Bando
}
abstract class Investigador{
  # objetivoAInvestigar: Jugador
  # ultimoInvestigado: Jugador
  # resultadoInvestigacion: Bando

  + bando() : Bando
  + elegirInvestigar(objetivo : Jugador)
  + resultadoInvestigacion() : Bando
  + ejecutar(accion : AccionDeRol)
}
interface PuedeInvestigar{
    + elegirInvestigar(objetivo : Jugador)
    + resultadoInvestigacion(): Bando
}

interface PuedeProteger{
    + elegirProteger(Jugador objetivo)
}
interface PuedeRevelarse{
    + revelarse()
    + revelarJugadorInvestigado(): Jugador
}
interface VotanteMafia{
    + crearVotoMafia(objetivo : Jugador) : VotoMafia
}
interface AccionNocturna{
    + actuarEnNoche(resolucion : ResolucionNocturna)
}
interface AccionDeRol {
  + ejecutarPara(rol : Rol)
  + ejecutarPara(investigador : Investigador)
  + ejecutarPara(detective : Detective)
  + ejecutarPara(medico : Medico)
  + ejecutarPara(mafioso : Mafioso)
  + ejecutarPara(padrino : Padrino)
  + ejecutarPara(sheriff : Sheriff)
}
class AccionRolInvestigar
class AccionRolProteger
class AccionRolVotoMafia
class AccionRolNocturna
class AccionRolResultadoInvestigacion
class AccionRolRevelarInvestigado
class AccionRolRevelarse
class AccionRolAgregarInvestigador
class AccionRolAgregarProtector
class AccionRolAgregarRevelable
Rol <|-- Mafioso
Rol <|-- Ciudadano
Mafioso <|-- Padrino
Rol <|-- Medico
Rol <|-- Investigador

Investigador <|-- Detective
Investigador <|-- Sheriff

VotoMafia <|.. VotoNormal
VotoMafia <|.. VotoPadrino
Mafioso ..> VotoNormal
Padrino ..> VotoPadrino

Carta o-- Rol
Carta --> EstadoCarta : estado
EstadoCarta <|.. Oculta
EstadoCarta <|.. Revelada
EstadoCarta ..> Rol

Bando <|.. BandoMafia
Bando <|.. BandoCiudadano

PuedeInvestigar <|..Investigador
PuedeProteger <|..Medico
PuedeRevelarse <|..Sheriff
VotanteMafia <|..Mafioso
AccionNocturna <|..Detective
AccionNocturna <|..Medico
AccionDeRol <|.. AccionRolInvestigar
AccionDeRol <|.. AccionRolProteger
AccionDeRol <|.. AccionRolVotoMafia
AccionDeRol <|.. AccionRolNocturna
AccionDeRol <|.. AccionRolResultadoInvestigacion
AccionDeRol <|.. AccionRolRevelarInvestigado
AccionDeRol <|.. AccionRolRevelarse
AccionDeRol <|.. AccionRolAgregarInvestigador
AccionDeRol <|.. AccionRolAgregarProtector
AccionDeRol <|.. AccionRolAgregarRevelable
AccionRolInvestigar ..> PuedeInvestigar
AccionRolProteger ..> PuedeProteger
AccionRolVotoMafia ..> VotanteMafia
AccionRolNocturna ..> AccionNocturna
AccionRolRevelarse ..> PuedeRevelarse
Rol ..> Bando
Rol ..> VotoMafia
Rol ..> AccionDeRol
Rol ..> ResolucionNocturna
Rol ..> Jugador
Detective ..> Jugador
Medico ..> ResolucionNocturna
@enduml
